asl/Asl.g4
//////////////////////////////////////////////////////////////////////
//
//    Asl - Another simple language (grammar)
//
//    Copyright (C) 2020-2030  Universitat Politecnica de Catalunya
//
//    This library is free software; you can redistribute it and/or
//    modify it under the terms of the GNU General Public License
//    as published by the Free Software Foundation; either version 3
//    of the License, or (at your option) any later version.
//
//    This library is distributed in the hope that it will be useful,
//    but WITHOUT ANY WARRANTY; without even the implied warranty of
//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
//    Affero General Public License for more details.
//
//    You should have received a copy of the GNU Affero General Public
//    License along with this library; if not, write to the Free Software
//    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
//
//    contact: José Miguel Rivero (rivero@cs.upc.edu)
//             Computer Science Department
//             Universitat Politecnica de Catalunya
//             despatx Omega.110 - Campus Nord UPC
//             08034 Barcelona.  SPAIN
//
//////////////////////////////////////////////////////////////////////

grammar Asl;

/////////////////////////////////////////////////////////////////////
//                          PARSER RULES                          ///
/////////////////////////////////////////////////////////////////////

// A program is a list of functions
program : function+ EOF
        ;

// A function has a name, a list of parameters and a list of statements
function : FUNC ID '(' parameters? ')' (':' type)? declarations statements ENDFUNC
         ;
parameters : parameter (',' parameter)*;

parameter : ID ':' type;

declarations : variable_decl*
             ;

variable_decl : VAR ID (',' ID)* ':' type
              ;

type  : ARRAY '[' INTVAL ']' OF basicType
      | basicType                           
      ;

basicType : INT
          | FLOAT
          | BOOL
          | CHAR
          ;

statements : statement*
           ;

// The different types of instructions
statement
          // Assignment
        : left_expr ASSIGN expr ';'                           # assignStmt
          // if-then-else statement (else is optional)
        | IF expr THEN statements (ELSE statements)? ENDIF    # ifStmt
          // hola
        | WHILE expr DO statements ENDWHILE                   # whileStmt
          // A function/procedure call has a list of arguments in parenthesis (possibly empty)
        | ident '(' ( expr (',' expr)* )? ')' ';'             # procCall
          // Read a variable
        | READ left_expr ';'                                  # readStmt
          // Write an expression
        | WRITE expr ';'                                      # writeExpr
          // Write a string
        | WRITE STRING ';'                                    # writeString
          //
        | RETURN expr? ';'                                    # returnStmt
        ;

// Grammar for left expressions (l-values in C++)
left_expr : ident                                   
          | ident '[' expr ']'                          
          ;

// Grammar for expressions with boolean, relational and aritmetic operators
expr    : '(' expr ')'                               # parent
        | ident '[' expr ']'                         # exprArray
        | ident '('( expr (',' expr)* )? ')'         # funcCall
        | op=(NOT|PLUS|MINUS) expr                   # unary
        | expr op=(MUL|DIV|MODULO)  expr             # arithmetic
        | expr op=(PLUS|MINUS) expr                  # arithmetic
        | expr op=(EQUAL|NE|GT|GE|LT|LE) expr        # relational
        | expr op=AND expr                           # logical
        | expr op=OR expr                            # logical
        | INTVAL                                     # value
        | FLOATVAL                                   # value
        | CHARVAL                                    # value
        | TRUEVAL                                    # value
        | FALSEVAL                                   # value
        | ident                                      # exprIdent
        ;

// Identifiers
ident   : ID
        ;

////////////////////////////////////////////////////////////////////
//                          LEXER RULES                          ///
////////////////////////////////////////////////////////////////////

ASSIGN    : '=' ;

///// LOGICAL TOKENS /////
AND       : 'and' ;
OR        : 'or'  ;
NOT       : 'not' ;

///// RELATIONAL TOKENS /////
EQUAL     : '==' ;
NE        : '!=' ;
GT        : '>'  ;
GE        : '>=' ;
LT        : '<'  ;
LE        : '<=' ;

///// ARITHMETIC TOKENS /////
PLUS      : '+' ;
MINUS     : '-' ;
DIV       : '/' ;
MUL       : '*' ;
MODULO    : '%' ;

///// KEYWORDS TOKENS /////

// ARRAY
VAR       : 'var'      ;
ARRAY     : 'array'    ;
OF        : 'of'       ;

// VALUE TOKENS
INT       : 'int'      ;
FLOAT     : 'float'    ;
BOOL      : 'bool'     ;
CHAR      : 'char'     ;

// CONTROL STRUCTURES
IF        : 'if'       ;
THEN      : 'then'     ;
ELSE      : 'else'     ;
ENDIF     : 'endif'    ;
WHILE     : 'while'    ;
DO        : 'do'       ;
ENDWHILE  : 'endwhile' ;

// FUNCTIONS
FUNC      : 'func'     ;
ENDFUNC   : 'endfunc'  ;
READ      : 'read'     ;

// I/O
WRITE     : 'write'    ;
RETURN    : 'return'   ;

// VALUE TOKENS
INTVAL    : ('0'..'9')+ ;
TRUEVAL   : 'true'  ;
FALSEVAL  : 'false' ;
FLOATVAL  : ('0'..'9')+ '.' ('0'..'9')+ ;
CHARVAL   : '\'' ( ESC_SEQ | ~('\\'|'\'') ) '\'' ;

// IDENTIFIER TOKEN
ID        : ('a'..'z'|'A'..'Z') ('a'..'z'|'A'..'Z'|'_'|'0'..'9')* ;

// Strings (in quotes) with escape sequences
STRING    : '"' ( ESC_SEQ | ~('\\'|'"') )* '"' ;

/////////////////////////////////////////////////////////////////////////////////////////////////////

fragment
ESC_SEQ   : '\\' ('b'|'t'|'n'|'f'|'r'|'"'|'\''|'\\') ;

// Comments (inline C++-style)
COMMENT   : '//' ~('\n'|'\r')* '\r'? '\n' -> skip ;

// White spaces
WS        : (' '|'\t'|'\r'|'\n')+ -> skip ;
// Alternative description
// WS        : [ \t\r\n]+ -> skip ;
